--- a/ground-zero/EPUB/content.xhtml
+++ b/ground-zero/EPUB/content.xhtml
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8"></meta>
 		<title>Ground zero</title>
-		<link rel="stylesheet" type="text/css" href="ground-zero.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="styles/ground-zero.css" class="day" title="day"/> 
 
 	</head>
 	<body>
@@ -12,17 +12,12 @@
 			<section epub:type="titlepage" id="titlepage">
 				<h1>Ground zero</h1>
 				<div class="aut">OSP HEAD</div>
-				
 				<p epub:type="dedication">To the wonderful EPUB world</p>
 			</section>
 		</section>
 		<section epub:type="bodymatter" id="bodymatter">
-
 			<section id="ch1">
 				<h2>I. Welcome</h2>
-				
-			</section>
-
 			</section>
 		</section>
 	</body>
