--- a/ground-zero/EPUB/nav.xhtml
+++ b/ground-zero/EPUB/nav.xhtml
@@ -3,29 +3,21 @@
 	xmlns:epub="http://www.idpf.org/2007/ops">
 	<head>
 		<meta charset="utf-8"></meta>		
-		<link rel="stylesheet" type="text/css" href="ground-zero.css" class="day" title="day"/> 
+		<link rel="stylesheet" type="text/css" href="styles/ground-zero.css" class="day" title="day"/> 
 	</head>
 	<body>
 		<nav epub:type="toc" id="toc">			
 			<ol>
-				<li><a href="ground-zero-content.xhtml#ch1">I. THE BURIAL OF THE DEAD</a></li>
-				<li><a href="ground-zero-content.xhtml#ch2">II. A GAME OF CHESS</a></li>
-				<li><a href="ground-zero-content.xhtml#ch3">III. THE FIRE SERMON</a></li>
-				<li><a href="ground-zero-content.xhtml#ch4">IV. DEATH BY WATER</a></li>
-				<li><a href="ground-zero-content.xhtml#ch5">V. WHAT THE THUNDER SAID</a></li>
-				<li><a href="ground-zero-content.xhtml#rearnotes">NOTES ON "THE WASTE LAND"</a></li>
+				<li><a href="content.xhtml#ch1">I. Welcome</a></li>
 			</ol>			
 		</nav>
 		<nav epub:type="landmarks">
 			<ol>
-				<li><a epub:type="frontmatter" href="ground-zero-content.xhtml#frontmatter"
+				<li><a epub:type="frontmatter" href="content.xhtml#frontmatter"
 						>frontmatter</a></li>
-				<li><a epub:type="bodymatter" href="ground-zero-content.xhtml#bodymatter"
+				<li><a epub:type="bodymatter" href="content.xhtml#bodymatter"
 						>bodymatter</a></li>
-				<li><a epub:type="backmatter" href="ground-zero-content.xhtml#backmatter"
-						>backmatter</a></li>
 			</ol>
 		</nav>
-
 	</body>
 </html>
