Expanded the self-concious-epub with a test chapter.

--- a/public/epub_content/self-conscious-epub/EPUB/nav.xhtml
+++ b/public/epub_content/self-conscious-epub/EPUB/nav.xhtml
@@ -10,6 +10,7 @@ xmlns:epub="http://www.idpf.org/2007/ops">
         <nav epub:type="toc" id="toc">
             <ol>
                 <li><a href="self-conscious-content.xhtml">Self-conscious ePub</a></li>
+                <li><a href="self-conscious-test.xhtml">Self-conscious ePub, test page</a></li>
             </ol>
         </nav>
     </body>
