changing names of artist

--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-10.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-10.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-9" class="article-title"><a id="Political-Economy-and--Monopoly-Abstractions---What-Social-Media-Demand" />Political Economy and Monopoly Abstractions: What Social Media Demand</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#patelis">Korinna Patelis</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#patelis">23249990</a></h2>
 		</div>
 		<div>
 			<p class="quote_no-space-after"><em>Our goal is not to build a platform. It’s to be across all of them.</em> </p>
