--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-11.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-11.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-10" class="article-title"><a id="Rhetorics-of-Sharing---Data--Imagination---and-Desire" />Rhetorics of Sharing: Data, Imagination, and Desire</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#kennedy">Jenny Kennedy</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#kennedy">5521438321</a></h2>
 		</div>
 		<div>
 			<p class="quote_no-space-after"><em>Whether across the world or across the street, Twitter – and more broadly, technology – allows people to view the world through each other’s eyes. As a result, we are able to share information and communicate more easily than any time in our past, bringing the world closer</em>.</p>
