--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-13.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-13.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-12" class="article-title"><a id="Silence---Delirium--Lies-" />Silence, Delirium, Lies?</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#bassett">Caroline Bassett</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#bassett">8834457351</a></h2>
 		</div>
 		<div>
 			<p class="quote"><em>We tell the truth best by becoming lies.</em><sup><a id="footnote-301299-1-backlink" class="footnote-link" href="#footnote-301299-1">1</a></sup><em></em></p>
