--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-14.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-14.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-13" class="article-title"><a id="The-Facebook-Aquarium---Freedom-in-a-Profile" />The Facebook Aquarium: Freedom in a Profile</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#ippolita">Ippolita</a> and <a href="unlike-us-reader-34.xhtml#mancinelli">Tiziana Mancinelli</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#ippolita">43412320001</a> and <a href="unlike-us-reader-34.xhtml#mancinelli">8988821</a></h2>
 		</div>
 		<div>
 			<p>Just as Facebook shares were being launched on the stock market, Ippolita published an e-book on the 16th of May 2012 titled <em>The Facebook Aquarium: The Resistible Rise of Anarcho-capitalism</em>. Through the lens of Facebook, this work offers a crushing analysis of how Foucauldian biopower is embodied in posthuman society, asking what political forms and possibilities are opened up in a world where human life, subjectivity, and social experience, are ever more intertwined with technology. </p>
