--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-15.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-15.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-14" class="article-title"><a id="Talking-About-Escape" />Talking About Escape</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#hardey">Mariann Hardey</a> and <a href="unlike-us-reader-34.xhtml#beer">David Beer</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#hardey">477477737</a> and <a href="unlike-us-reader-34.xhtml#beer">21111212</a></h2>
 		</div>
 		<div>
 			<p>Talking about escape is nothing new. In the mid 1960s, to pick one rather famous example, The Animals’ song ‘We Gotta Get out of This Place’ found resonance with a large mainstream audience. In fact, themes of escape are quite common in popular culture. The repertoire of Johnny Cash suggests itself as a case in point. Sometimes the points of escape are literal and material, such as in classic prison escape movies, in other instances they may be about social pressures and oppressive social norms, like in <em>The Graduate</em> (1967), <em>Vanishing Point</em> (1971), or <em>Thelma and Louise</em> (1991). The list continues, and in so doing suggests that talk about escape, rather than escape itself, has been a relatively prominent cultural presence for some time. But, we might ask, what form do such representations of escape take in an increasingly connected and networked social context, where social media have come to be so integral to everyday life?</p>
