--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-16.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-16.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-15" class="article-title"><a id="Boredom--on-Facebook" />Boredom on Facebook</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#wittkower">D.E. Wittkower</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#wittkower">37277728332333333</a></h2>
 		</div>
 		<div>
 			<p>I come to praise boredom, not to bury it. And boredom, for its part, is far from defeated. Indeed, all the more that we take up arms against it, and seek to surround and overtake it, all the more does it stand before us, quiet, resolute, unmoved.</p>
