--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-18.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-18.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-17" class="article-title"><a id="None-of-Your-Business----Analyzing-the-Legitimacy--and-Effects-of-Gendering-Social--Spaces-Through-S" />None of Your Business?: Analyzing the Legitimacy and Effects of Gendering Social Spaces Through System Design</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#mcnicol">Andrew McNicol</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#mcnicol">19</a></h2>
 		</div>
 		<div>
 			<p class="quote"><em>How we relate to or speak about a sub-atomic particle may not change how that particle behaves, but referring and relating to a person in a certain way undoubtedly determines that person’s being.</em><sup><a id="footnote-303962-1-backlink" class="footnote-link" href="#footnote-303962-1">1</a></sup></p>
