--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-19.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-19.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-18" class="article-title"><a id="x-Why-I-Left-Facebook----Stubbornly-Refusing-to-not-Exist--Even-After-Opting-Out-of-Mark--Zuckerberg-" />‘Why I Left Facebook’: Stubbornly Refusing to not Exist Even After Opting Out of Mark Zuckerberg’s Social Graph</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#gehl">Robert W. Gehl</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#gehl">982</a></h2>
 		</div>
 		<div>
 			<p>Leaving Facebook is a lonely thing to do.<sup> <a id="footnote-304984-1-backlink" class="footnote-link" href="#footnote-304984-1">1</a></sup> I left Facebook after a two-year stint on the social network. To me, leaving felt like a solitary act, like slipping away alone from a massive party before it ends. This seeming solitude was amplified by the fact that I could not use Facebook to explain to my friends and family why I had left. </p>
