--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-2.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-2.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-1" class="article-title"><a id="A-World-Beyond-Facebook---Introduction-to-the--Unlike-Us-Reader" />A World Beyond Facebook: Introduction to the Unlike Us Reader</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#lovink">Geert Lovink</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#lovink">82733271982</a></h2>
 		</div>
 		<div>
 			<p>Social slogans of the day: ‘Das Ich ist nicht zu retten’, Ernst Mach – ‘I fear the day when the technology overlaps with our humanity. The world will only have a generation of idiots’, Albert Einstein – ‘I can buy a Ford, Toyota, BMW or Smart car and drive on the same roads and use the same fuel. Everything is interchangeable about them except the key that gets me in and starts the engine. It’s a good model for how our communication systems should work, at all levels’, Dave Winer – ‘Take a position, be an author’ – the European concert of networks – ‘I am inspired by the internet’, Johan Sjerpstra – ‘It is a small step from distributed to dispersion…’ – ‘Neither information nor a drug fix ever gives any happiness when you have it, but will make you miserable when you don’t’, Michel Serres – ‘I am traveling a lot, online’.</p>
