--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-20.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-20.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-19" class="article-title"><a id="Illegal-Art--and-Other-Stories--About-Social-Media" />Illegal Art and Other Stories About Social Media</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#lodi">Simona Lodi</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#lodi">894148111</a></h2>
 		</div>
 		<div class="lodi-1 img">
 			<img src="image/lodi_cd_letter_worm_fmt.jpeg" alt="Cease &amp; Desist Letter" />
