--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-21.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-21.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-20" class="article-title"><a id="Face-to-Facebook---Smiling-in-the-Eternal-Party" />Face to Facebook, Smiling in the Eternal Party</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#ludovico">Alessandro Ludovico</a> and <a href="unlike-us-reader-34.xhtml#cirio">Paolo Cirio</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#ludovico">98984</a> and <a href="unlike-us-reader-34.xhtml#cirio">4323345</a></h2>
 		</div>
 		<div>
 			<p>Social networking is naturally addictive. It’s about exploring something very familiar that has never been available before: staying in touch with past and present friends and acquaintances in a single, potentially infinite, virtual space. The phenomenon challenges us psychologically, creating situations that previously were not possible. Before the rise of social networking, former friends and acquaintances would tend to drift away from us and potentially become consigned to our personal histories. Having a virtual space with (re)active people constantly updating their activities is the basic, powerful fascination of the social network. But there’s another attraction, based on the elusive sport (or perhaps urge) to position ourselves. The answer to the fundamental identity question, ‘who am I?’, can be given only in relation to the others that we interact with (friends, family, work colleagues, and so on). And the answer to this question seems clearer after we take a look at our list of social network friends. </p>
