--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-22.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-22.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-21" class="article-title"><a id="On-Pleaselike.com--and-Facebook-Bliss" />On Pleaselike.com and Facebook Bliss</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#doulas">Louis Doulas</a> and <a href="unlike-us-reader-34.xhtml#niehaus">Wyatt Niehaus</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#doulas">185949</a> and <a href="unlike-us-reader-34.xhtml#niehaus">555435</a></h2>
 		</div>
 		<div>
 			<h3 class="text_subtitle">Pleaselike.com</h3>
