--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-23.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-23.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-22" class="article-title"><a id="Art-After-Social-Media--as-a-Rejection-and-Reflection--of-Free-Market-Conventions" />Art After Social Media as a Rejection and Reflection of Free Market Conventions</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#troemel">Brad Troemel</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#troemel">741</a></h2>
 		</div>
 		<div>
 			<p>While the music, film, television, and print industries have each been radically overturned by digital technologies, fine art remains locked in a transitional period, negotiating a complex and relatively new relationship with social media. On one hand exists a utopian vision for art on the internet: a world where intellectual property is part of a commons, where authorship is synonymous with viewership, and where the designation between art and everyday life is fluid. On the other hand is an unprecedented rise of artists applying managerial strategies to themselves, of artists conceiving their identity as a brand to be developed through Facebook, for instance. This is a world where today’s 17-year-old creative arguably has a better handle on advertising techniques she can use to direct traffic to her Tumblr than our presidential candidates needed to have 70 years ago. Art after social media is both a shattering of art’s traditional relationship to capitalism and the hyper-charged embodiment of it.</p>
