--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-24.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-24.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-23" class="article-title"><a id="Disruptive-Business--as-Artistic-Intervention" />Disruptive Business as Artistic Intervention</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#bazzichelli">Tatiana Bazzichelli</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#bazzichelli">857475134</a></h2>
 		</div>
 		<div>
 			<p>This essay aims to introduce the concept of disruptive business as a form of artistic and hacktivist intervention within the market field of Web 2.0. The main approach is not simply to refute business, since it has often been part of counterculture and cultural development, but to instead reappropriate its philosophy, making it functional for social purposes beyond the realms of capitalistic logic.</p>
