--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-25.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-25.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-24" class="article-title"><a id="Facebook-Resistance--Augmented-Freedom" />Facebook Resistance Augmented Freedom</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#stumpel">Marc Stumpel</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#stumpel">7801341374730147</a></h2>
 		</div>
 		<div>
 			<p class="quote_no-space-after"><em>What is needed is an invention of social network software where everybody is a concept designer.</em></p>
