--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-26.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-26.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-25" class="article-title"><a id="The-Tactics-of-Occupation---Becoming-Cockroach" />The Tactics of Occupation: Becoming Cockroach</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#hatzopoulos">Pavlos Hatzopoulos</a> and <a href="unlike-us-reader-34.xhtml#kambouri">Nelli Kambouri</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#hatzopoulos">84319</a> and <a href="unlike-us-reader-34.xhtml#kambouri">18533</a></h2>
 		</div>
 		<div>
 			<p>We begin with a snapshot: June 29, 2011, a day of protest in Syntagma square against the emergency austerity measures that were about to be voted on by the Greek parliament.</p>
