--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-27.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-27.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-26" class="article-title"><a id="Occupy-Social-NEtworks---the-Paradoxes-of-Corporate--Social-Media-for-Networked--Social-Movements" />Occupy Social Networks: the Paradoxes of Corporate Social Media for Networked Social Movements</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#terranova">Tiziana Terranova</a> and <a href="unlike-us-reader-34.xhtml#donovan">Joan Donovan</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#terranova">138888888</a> and <a href="unlike-us-reader-34.xhtml#donovan">7712</a></h2>
 		</div>
 		<div>
 			<p>Since at least 2004, the internet, and more specifically the web, has witnessed a notorious and controversial shift away from the model of the static web page towards a social web or Web 2.0 model where the possibilities of users to interact with the web have multiplied. It has become much easier for a layperson to publish and share texts, images and sounds. A new topology of distribution of information has emerged, based in ‘real’ social networks, but also enhanced by casual and algorithmic connections. Commerce, advertising, and gaming constitute the business models by which social networking platforms monetize users’ attention.</p>
