--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-28.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-28.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-27" class="article-title"><a id="Meeting-the-Alternatives---Notes-About-Making-Profiles--and-Joining-Hackers" />Meeting the Alternatives: Notes About Making Profiles and Joining Hackers</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#velden">Lonneke van der Velden</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#velden">417177400</a></h2>
 		</div>
 		<div>
 			<p>‘But that’s no better than Facebook!’ was the response from the audience to a small research project on alternative social networks and their default settings.<sup><a id="footnote-310278-1-backlink" class="footnote-link" href="#footnote-310278-1">1</a></sup> By looking at the defaults, the ways to get connected to a network, and how to ‘manage’ one’s profile, our team aimed to sketch out the different environments that social networking platforms had to offer.<sup><a id="footnote-310278-2-backlink" class="footnote-link" href="#footnote-310278-2">2</a></sup> Most of the decentralized, non-corporate platforms we chose to investigate had profile pages set to ‘public’ by default, even those that manifested a high level of privacy awareness. Given the severe criticisms against Facebook for opening up profile pages to the public, that finding surprised us. However, it also suggests that the priorities of alternative social networks lie elsewhere, beyond issues of profile management. These notes present some of my findings to the question: what are the issues being put forward by alternative social networks? </p>
