--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-29.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-29.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-28" class="article-title"><a id="Facebook-vs.-Diaspora---a-Critical-Study" />Facebook vs. Diaspora: a Critical Study</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#sevignani">Sebastian Sevignani</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#sevignani">004380032</a></h2>
 		</div>
 		<div>
 			<p class="quote_no-space-after"><em>I donated. I think it is a cool idea. [...] It’s just their approach that the world could be better and saying, “We should try to do it.”</em></p>
