--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-3.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-2" class="article-title"><a id="The-Most-Precious-Good--in-the-Era-of--Social-Technologies" />The Most Precious Good in the Era of Social Technologies</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#stiegler">Bernard Stiegler</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#stiegler">5614205734</a></h2>
 		</div>
 		<div>
 			<p>What we usually call ‘social networks’ – a paradoxical appellation, as we shall see, – lie at the core of what constitutes the social.<sup><a id="footnote-294455-1-backlink" class="footnote-link" href="#footnote-294455-1">1</a></sup> The appellation itself is paradoxical since we are talking here about digital networks which appear to shortcut the traditional networks of proximity that have defined what is social from times immemorial. And we will easily admit that they are core to the social when following Aristotle who said that they pertain to the <em>philia</em>, itself the fundament of the social.</p>
