--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-30.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-30.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-29" class="article-title"><a id="Towards-a-Free--Federated-Social-Web---Lorea-Takes-the-Networks-" />Towards a Free  Federated Social Web: Lorea Takes the Networks!</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#cabello">Florencio Cabello</a>, Marta G. <a href="unlike-us-reader-34.xhtml#franco">Franco</a> and <a href="unlike-us-reader-34.xhtml#hache">Alexandra Haché</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#cabello">03744</a>, Marta G. <a href="unlike-us-reader-34.xhtml#franco">Franco</a> and <a href="unlike-us-reader-34.xhtml#hache">89</a></h2>
 		</div>
 		<div>
 			<p>2007. Everybody talks about Facebook. In the corridors of research centers, Web 2.0 is the new Holy Grail that will solve all problems at stake: the lack of social cohesion and formal citizenship, and digital and socio-economic exclusion. Internet researchers finally become hype as they dig into the sociabilities deployed by social networking sites (SNS): how they enable to bridge and (mostly) bond social capital, how they effect intimacy and privacy, and how they are redesigning social relations all over the place. At that time, critical analysis of their status as for-profit companies, their negative impact on net neutrality and decentralized web architecture,<sup><a id="footnote-311758-1-backlink" class="footnote-link" href="#footnote-311758-1">1</a></sup> and last but not least, their potential for social and political transformation were not yet issues of interest. </p>
