--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-31.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-31.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-30" class="article-title"><a id="Unlikely-Outcomes--A-Distributed-Discussion-on--the-Prospects-and-Promise-of--Decentralized-Personal" />Unlikely Outcomes? A Distributed Discussion on the Prospects and Promise of Decentralized Personal Data Architectures</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#barocas">Solon Barocas</a>, <a href="unlike-us-reader-34.xhtml#gurses">Seda Gürses</a>, <a href="unlike-us-reader-34.xhtml#narayanan">Arvind Narayanan</a> and <a href="unlike-us-reader-34.xhtml#toubiana">Vincent Toubiana</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#barocas">333218</a>, <a href="unlike-us-reader-34.xhtml#gurses">9091221</a>, <a href="unlike-us-reader-34.xhtml#narayanan">83043834</a> and <a href="unlike-us-reader-34.xhtml#toubiana">2132111</a></h2>
 		</div>
 		<div>
 			<p><em>Introduction by Seda Gürses</em></p>
