--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-4.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-4.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-3" class="article-title"><a id="Against-Remediation" />Against Remediation</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#berry">David M. Berry</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#berry">3250490076</a></h2>
 		</div>
 		<div>
 			<p>In contemporary life, the social is a site for a particular form of technological focus and intensification. Traditional social experience has, of course, taken part in various forms of technical mediation and formatting, and has been subject to control technologies. Think, for example, of the way in which the telephone structured the conversation, diminishing the value of proximity, whilst simultaneously intensifying certain kinds of bodily response and language use. It is important, then, to trace media genealogies carefully and to be aware of the previous ways in which the technological and social have met – and this includes the missteps, mistakes, dead-ends, and dead media. This understanding of media, however, has increasingly been understood in terms of the notion of <em>remediation</em>, which has been considered to helpfully contribute to our thought about media change, whilst sustaining a notion of medium specificity. Bolter and Grusin, who coined its contemporary usage, state,</p>
