--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-6.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-6.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-5" class="article-title"><a id="The-Fan-Dance---How-Privacy-Thrives-in-an-Age-of-Hyper-Publicity" />The Fan Dance: How Privacy Thrives in an Age of Hyper-Publicity</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#jurgenson">Nathan Jurgenson</a> and <a href="unlike-us-reader-34.xhtml#rey">PJ Rey</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#jurgenson">1264421989</a> and <a href="unlike-us-reader-34.xhtml#rey">774663820</a></h2>
 		</div>
 		<div>
 			<p>The history of our digitally-connected present is already being written: writers, within and outside of the academy, have constructed a modern mythology about how social media and other digital technologies are eroding our once-valued privacy and creating a new cultural movement of mass publicity in its stead. We believe, however, that this narrative of digital mass exhibitionism is a fiction that rests on an incorrect assumption that privacy and publicity are zero-sum. While the common, simple, story is that publicity comes at the expense of privacy, we provide a counter-narrative that demonstrates a dialectical<em> </em>relationship, where privacy and publicity are deeply intertwined, mutually reinforcing, and perhaps both increasing as digital information grows more ubiquitous. And, we believe that this interplay between the revelation and concealment is, at least partially, responsible for the seductive quality of social media.</p>
