--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-7.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-7.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-6" class="article-title"><a id="Databases-as-Citadels-in-the-Web-2.0" />Databases as Citadels in the Web 2.0</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#warnke">Martin Warnke</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#warnke">663552429</a></h2>
 		</div>
 		<div>
 			<p>What, if the promises of the Web 2.0 – grassroots democracy – were pure ideology? What, if the content we generate also generated massive inequality: power to the very few over the many of us? What, if this were equally annoying and, at the same time, unavoidable? </p>
