--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-8.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-8.xhtml
@@ -9,7 +9,7 @@
 		<div>
 			<h1 id="toc_marker-7" class="article-title"><a id="Under-the-Skin-of-Networks---How-Concentration-Affects-Social-Practices--in-Web-2.0-Environments" />Under the Skin of Networks: How Concentration Affects Social Practices in Web 2.0 Environments</h1>
 			<p class="slash">/</p>
-			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#miconi">Andrea Miconi</a></h2>
+			<h2 class="author-name"><a href="unlike-us-reader-34.xhtml#miconi">92132371</a></h2>
 		</div>
 		<div>
 			<p>Let’s go straight to the point: to what extent are Web 2.0 services – blogs, social media, communities, and all the environments we usually refer to as participative and free – really democratic? Whether it is due to structural or accidental factors, it seems evident that new hegemonies are taking place inside the horizontal pattern of the internet, to the point that nobody can still imagine that this pattern will eventually lead to a horizontal reconfiguration of society at large. On the contrary, we could question if the web, as such, is a participatory, egalitarian, and democratic structure, by analyzing some new foundings coming from both historical evidence and empirical research. </p>
