--- a/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-12.xhtml
+++ b/public/epub_content/Unlike-us/OEBPS/unlike-us-reader-12.xhtml
@@ -4,6 +4,18 @@
 	<head>
 		<title>unlike-us-reader-12</title>
 		<link href="css/unlike-us-reader.css" rel="stylesheet" type="text/css" />
+		<script src='http://code.jquery.com/jquery-1.10.2.min.js' type="text/javascript">
+</script>
+  <script type='javascript'>
+
+
+        document.ready(function(){
+                
+                $('#animate').css('color':'red');
+                
+        });
+
+  </script>
 	</head>
 	<body id="unlike-us-reader" xml:lang="en-GB">
 		<div>
